Finished prompt UI, now per-project custom name works

--- a/examples/index.html
+++ b/examples/index.html
@@ -3,12 +3,12 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Atom Discord UI Test</title>
-		<link rel="stylesheet" href="/dist/example.bundle.css">
+		<link rel="stylesheet" href="/dist/example.bundle.less">
 	</head>
 
 	<body>
 		<div id="prompt"></div>
-		
+
 		<script src="/dist/example.bundle.js"></script>
 	</body>
 </html>
